--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   
   
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
