--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js">
   </script>
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
   </html>
