Fix image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!--Accuile du site-->
     <section id="accueil">
       <figure>
-        <img src="/monim_1.png" alt="Mon image" />
+        <img src="monim_1.png" alt="Mon image" />
         <figcaption>
           Joshua Web, développeur junior, je suis
           spécialisé dans le front-end. Ce site est mon portfolio.
@@ -56,7 +56,7 @@
     <!--Section Projets-->
     <section id="projets">
       <figure>
-        <img src="/impro.png" alt="Image projet" />
+        <img src="impro.png" alt="Image projet" />
         <figcaption>
           Mon portfolio que voici est mon premier projet concret et réel.
         </figcaption>
